@@ -45,7 +45,7 @@ gnumeric_reqs="
 glib-2.0	>= 2.0.0
 gobject-2.0	>= 2.0.0
 gmodule-2.0	>= 2.0.0
-libgsf-1	>= 1.7.2
+libgsf-1	>= 1.8.0
 gtk+-2.0	>= 2.0.0
 libxml-2.0	>= 2.4.12
 libglade-2.0	>= 1.99.7
@@ -706,6 +706,7 @@ src/cut-n-paste-code/egg/menu/Makefile
 src/cut-n-paste-code/egg/toolbar/Makefile
 src/cut-n-paste-code/foocanvas/Makefile
 src/cut-n-paste-code/foocanvas/libfoocanvas/Makefile
+src/cut-n-paste-code/goffice/Makefile
 doc/Makefile
 doc/C/Makefile
 doc/C/figures/Makefile
